--- a/style/style.css
+++ b/style/style.css
@@ -89,11 +89,11 @@ button:hover {
 .cards-container {
     max-height: 600px; /* Defina o valor que achar adequado */
     overflow-y: auto;
+    
     padding: 20px;
     width: 70%;
     margin: 0 auto;
 }
-
 .cards-container::-webkit-scrollbar {
     width: 12px; /* Largura da barra de rolagem */
 }
@@ -119,11 +119,26 @@ button:hover {
     margin: 24px 0;
     padding: 20px;
     border-radius: 10px;
-    height: 200px;
+    height: 100%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
 }
+.card-personagem .imagem-container {
+    width: 150px; /* Ajuste conforme necessário */
+    height: 175px; /* Ajuste conforme necessário */
+    border-radius: 50%; /* Faz a imagem circular */
+    overflow: hidden; /* Garante que a imagem não ultrapasse o contêiner circular */
+    margin-bottom: 10px; /* Espaçamento abaixo da imagem */
+    display: flex;
+    justify-content: center; /* Centraliza a imagem horizontalmente */
+    align-items: center; /* Centraliza a imagem verticalmente */
+}
 
+.card-personagem .imagem-container img {
+    width: 100%; /* Faz a imagem preencher o contêiner */
+    height: auto; /* Mantém a proporção da imagem */
+    object-fit: cover; /* Cobre o contêiner sem distorcer a imagem */
+}
 /* Estilo específico para a casa Sonserina */
 .card-personagem.sonserina {
     background-color: #1F7250 !important; /* Verde da Sonserina */
